CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/amt_paid_rate_adjd__c.field-meta.xml
<CustomField>
    <fullName>amt_paid_rate_adjd__c</fullName>
    <description>amt_paid_rate_adjd</description>
    <externalDeveloperName>amt_paid_rate_adjd</externalDeveloperName>
    <label>Adjusted Rate Paid</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>