CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/cde_type_rate_adjd__c.field-meta.xml
<CustomField>
    <fullName>cde_type_rate_adjd__c</fullName>
    <description>cde_type_rate_adjd</description>
    <externalDeveloperName>cde_type_rate_adjd</externalDeveloperName>
    <label>Adjusted Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>