CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/dte_care__c.field-meta.xml
<CustomField>
    <fullName>dte_care__c</fullName>
    <description>dte_care</description>
    <externalDeveloperName>dte_care</externalDeveloperName>
    <label>Care Date</label>
    <type>Date</type>
</CustomField>