CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/idn_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_adjmt__c</fullName>
    <description>idn_adjmt</description>
    <externalDeveloperName>idn_adjmt</externalDeveloperName>
    <label>Adjustment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>