CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/idn_detail_adjmt_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_detail_adjmt_hist__c</fullName>
    <description>idn_detail_adjmt_hist</description>
    <externalDeveloperName>idn_detail_adjmt_hist</externalDeveloperName>
    <label>Adjustment Detail Hist ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>