CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/idn_detail_pmt_sub__c.field-meta.xml
<CustomField>
    <fullName>idn_detail_pmt_sub__c</fullName>
    <description>idn_detail_pmt_sub</description>
    <externalDeveloperName>idn_detail_pmt_sub</externalDeveloperName>
    <label>Sub Payment Detail</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>