CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_detail_hist__x/fields/nbr_hours_auth_orig__c.field-meta.xml
<CustomField>
    <fullName>nbr_hours_auth_orig__c</fullName>
    <description>nbr_hours_auth_orig</description>
    <externalDeveloperName>nbr_hours_auth_orig</externalDeveloperName>
    <label>Authorized Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>